1.2.0
- moved config.lua to mod settings
- replaced RailTanker with FluidWagon for fluid transport (RailTanker will be ignored so i can drop the fake item conversions)
- short circuit detection uses network id
	- removed grey detection signal from output
	
1.1.2
- intermediate 0.15 support	(not thoroughly tested)

1.1.1
- deconstruction of broken stops properly removes stop and surrounding I/O entities
- automatically remove orphaned lamp control entities
- speed up loading by skipping parts of initialization according to old_version
- messages differing only in item count are treated as the same message by the message filter
- decreased delivery-removed-timeout and delivery-removed-train-invalid from loglevel 2 to 1

1.1.0
- added finish_loading to config: prevents trains from leaving while inserters are working by adding 2s inactivity

1.0.1
- fixed possible errors with mods changing the base train stop recipe

1.0.0
- Dispatcher uses linear distance between depot and provider when choosing between equally valid trains
- localized console Messages for log levels 1, 2 and 3
- localized Items & Fluids in Messages (thanks to MagmaMcFry)
- added signal "Locked Slots per Wagon"

0.10.2
- train composition signals factor in train direction, so the lowest bit always represents the entity next to the stop
- changed "(UpdateStopParkedTrain): couldn't assign train id" to debug level

0.10.1
- increased performance by reading wagons inventory size from data.raw (thanks to folk)

0.10.0
- added Limit Trains signal to Provider & Requester

0.9.13
- fixed: ignore min delivery size signal being ignored
- fixed: error when disabling RailTanker Mod

0.9.12
- fixed possible variable conflicts https://forums.factorio.com/viewtopic.php?f=23&t=43392

0.9.11
- message filter uses message age instead of message count to suppress messages
- increased detailed messages about order generation from log level 3 to 4

0.9.10
- adapted to creative mode 0.2.8