@@ -4,19 +4,19 @@ ltn-interface-log-output=logging output
 ltn-interface-message-filter-age=message filter timeout (ticks)
 
 ltn-dispatcher-min-delivery-size=min delivery size
+ltn-dispatcher-use-best-effort=use best effort
 ltn-dispatcher-stop-timeout=stop inactivity timeout (ticks)
 ltn-dispatcher-delivery-timeout=delivery timeout (ticks)
-ltn-dispatcher-finish-loading=finish loading & unloading
-ltn-dispatcher-use-best-effort=use best effort
+ltn-dispatcher-finish-loading=finish loading
 
 
 [mod-setting-description]
-ltn-interface-log-level=4: debug, 3: scheduler messages, 2: basic messages (default), 1 errors only, 0: off
-ltn-interface-log-output=console: in game console, log: logfile in factorio root directory, both: default
-ltn-interface-message-filter-age=Message age in ticks before filtered messages are shown again.
+ltn-interface-log-level=Detail level of messages.\n 4: debug\n 3: scheduler messages\n 2: basic messages (default)\n 1 errors only\n 0: off
+ltn-interface-log-output=Set message output.\n console: in game console\n log: logfile in factorio root directory\n both: console & logfile (default)
+ltn-interface-message-filter-age=Message age in ticks before filtered messages are shown again.\ndefault = 18000
 
-ltn-dispatcher-min-delivery-size=Amount of items/fluids to trigger a delivery. Can be overridden individually with min delivery size for each requesting stop.
-ltn-dispatcher-stop-timeout=Duration in ticks of inactivity before forcing trains out of stations.
-ltn-dispatcher-delivery-timeout=Duration in ticks deliveries can take before assuming the train was lost.
-ltn-dispatcher-finish-loading=Prevents trains from leaving while inserters/pumps are working by adding 2s inactivity condition.
-ltn-dispatcher-use-best-effort=When active, providers below min delivery size are also used. Global version of Ignore Minimum Delivery Size signal.
+ltn-dispatcher-min-delivery-size=Amount of items/fluids triggering a delivery.\nCan be overridden with Minimum Delivery Size at requesting stops.\ndefault = 1000
+ltn-dispatcher-use-best-effort=When active, providers below min delivery size are also used.\nEqual to setting Ignore Minimum Delivery Size at every provider.\ndefault = false
+ltn-dispatcher-stop-timeout=Duration in ticks of inactivity before forcing trains out of stations.\ndefault = 7200 (2min)
+ltn-dispatcher-delivery-timeout=Duration in ticks deliveries can take before assuming the train was lost.\ndefault = 18000 (5min)
+ltn-dispatcher-finish-loading=Prevents trains from leaving while inserters/pumps are working by adding 2s inactivity condition.\ndefault = true
