@@ -1,8 +1,9 @@
 1.2.0
 - moved config.lua to mod settings
-- replaced RailTanker with FluidWagon for fluid transport (RailTanker will be ignored so i can drop the fake item conversions)
+- added support for any FluidWagon for fluid transport 
+- removed support of RailTanker (RailTankers will be ignored, removed fake item conversions)
 - short circuit detection uses network id
-	- removed grey detection signal from output
+  - removed grey detection signal from output
 	
 1.1.2
 - intermediate 0.15 support	(not thoroughly tested)
